[package]
name = "gameboy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# rendering/windowing library
macroquad = "0.4"

# allows me to set random values to the RAM
# just makes it more faithful to the real gameboy
rand = "0.8.0"

# command line arguments
clap = { version = "4.4.18", features = [ "derive" ] }
[profile.dev]
opt-level = 3